# cvssc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
cvssc/0.1.0/: typst.toml
cvssc/0.1.0/src/: cvssc.typ  main.typ
cvssc/0.1.1/src/: cvssc.typ
cvssc/0.2.0/: README.md  typst.toml
cvssc/0.2.0/src/: constants.typ
cvssc/0.2.0/src/assets/: cvss.json
cvssc/0.2.1/: README.md  lib.typ  sandbox.typ  typst.toml
cvssc/0.2.1/src/: cvssc.typ  utils.typ  validation.typ
cvssc/0.2.1/src/assets/: tests.json
cvssc/0.2.1/src/v2/: calculator.typ
src/: lib.rs
