[package]
name = "cvssc"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nvd-cvss = "0.1.1"
# wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol.git", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.15"
anyhow = "1"
ciborium = "0.2.2"

[profile.dev]
lto = 'thin'        # Enable link-time optimization
opt-level = 'z'     # Optimize for size
panic = 'abort'     # Abort on panic

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
